# mv

./: .gitignore  .prettierignore  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rustfmt.toml  tsconfig.app.json  tsconfig.json  vite.config.ts
.github/workflows/: release.yaml
assets/: cssMode-Cv1iWkjq.js  freemarker2-CiJnRIMU.js  handlebars-B6lZLreE.js  html-BuR-a2NG.js  htmlMode-C-BZV5uF.js  index-B8gCevs2.css  index-BabqIhG2.js  index-BnnAeAbX.css  index-DKNiFRNo.js  javascript-BXw4v4LN.js  jsonMode-DWB51xJ7.js  liquid-CH4rd6Wq.js  mdx-BTlEsly6.js  mv_wasm-BDSzbNfh.js  mv_wasm_bg.wasm  python-DzpHau8c.js  razor-P1dZemmC.js  tsMode-DWooydlp.js  typescript-CMjswVC9.js  xml-BGI-Mgty.js  yaml-Ck4PpgT1.js
docs/: roadmap.md  setup.md
plugins/vite-plugin-wasm-pack/: README.md  package.json  tsconfig.json
scripts/: create-release.sh  replace-version.cjs
src-core/: Cargo.toml
src-core/src/: error.rs  lib.rs
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json  tauri.linux.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  desktop_analyzer_state.rs  error.rs  lib.rs  main.rs  updates.rs  utils.rs
src-tauri/src/window/: macos_window.rs  macos_window_menu.rs  mod.rs
src-wasm/: Cargo.toml
src-wasm/src/: lib.rs  web_analyzer_state.rs
src-web/: global.css  main.tsx
src-web/hooks/: useAnalyzeSourceCode.ts  useLanguage.ts  useUpdates.ts
src-web/lib/: appInfo.ts  router.ts  source-code-compression.ts  (+2 more)
(+39 files in other folders)
