[package]
name = "mv-app"
version = "0.0.0"
authors = ["Humble Penguin"]
edition = "2024"

[lib]
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]


[build-dependencies]
tauri-build = { version = "2.3.0", features = [] }

[dependencies]
tauri = { version = "2.7.0", features = [] }
tauri-plugin-log = "2"
tauri-plugin-os = "2"
tokio = "1.47.1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
thiserror = "2.0.14"
regex = "1.11.1"
indexmap = { version = "2.11.0", features = ["serde"] }
async-trait = "0.1.89"
rand = "0.9.2"
font-kit = "0.14.3"
mv-core = { path = "../src-core" }
webbrowser = "1.0.5"


[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26.0"
hex_color = "3.0.0"
log = "0.4.27"
objc = "0.2.7"
rand = "0.9.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
tauri-plugin-window-state = "2"
