[package]
name = "mv-wasm"
version = "0.0.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.101"
web-sys = { version = "0.3.78", features = ["Window", "console", "Storage"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
indexmap = { version = "2.11.0", features = ["serde"] }
async-trait = "0.1.89"
getrandom = { version = "0.3.3", features = ["wasm_js"] }
mv-core = { path = "../src-core" }
wasm-bindgen-futures = "0.4.51"
